[package]
name = "axlib-test-utils"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Axlib test utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
axlib-test-utils-derive = { version = "0.10.0-dev", path = "./derive" }
tokio = { version = "1.10", features = ["macros", "time"] }

[dev-dependencies]
sc-service = { version = "0.10.0-dev", path = "../client/service" }
trybuild = { version = "1.0.53", features = [ "diff" ] }
