[package]
description = "Connectivity manager based on reputation"
homepage = "http://axiacoin.network"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-peerset"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
repository = "https://github.com/axiatech/axlib/"
documentation = "https://docs.rs/sc-peerset"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.9"
libp2p = { version = "0.40.0", default-features = false }
sc-utils = { version = "4.0.0-dev", path = "../utils"}
log = "0.4.8"
serde_json = "1.0.74"
wasm-timer = "0.2"

[dev-dependencies]
rand = "0.7.2"
