[package]
name = "sc-state-db"
version = "0.10.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "State database maintenance. Handles canonicalization and pruning in the database."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = "0.11.2"
log = "0.4.11"
sc-client-api = { version = "4.0.0-dev", path = "../api" }
sp-core = { version = "5.0.0", path = "../../primitives/core" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
parity-util-mem = { version = "0.10.2", default-features = false, features = ["primitive-types"] }
parity-util-mem-derive = "0.1.0"
