[package]
name = "sp-database"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Axlib database trait."
documentation = "https://docs.rs/sp-database"
readme = "README.md"

[dependencies]
parking_lot = "0.11.2"
kvdb = "0.10.0"

