[package]
name = "sp-keyring"
version = "5.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Keyring support code for the runtime. A set of test accounts."
documentation = "https://docs.rs/sp-keyring"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-core = { version = "5.0.0", path = "../core" }
sp-runtime = { version = "5.0.0", path = "../runtime" }
lazy_static = "1.4.0"
strum = { version = "0.23.0", features = ["derive"] }
