[package]
name = "sp-maybe-compressed-blob"
version = "4.1.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Handling of blobs, usually Wasm code, which may be compresed"
documentation = "https://docs.rs/sp-maybe-compressed-blob"
readme = "README.md"

[dependencies]
thiserror = "1.0"
zstd = { version = "0.9.0", default-features = false }
