[package]
description = "Axlib offchain workers primitives"
name = "sp-offchain"
version = "4.0.0-dev"
license = "Apache-2.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "5.0.0", default-features = false, path = "../core" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-runtime = { version = "5.0.0", default-features = false, path = "../runtime" }

[features]
default = ["std"]
std = ["sp-core/std", "sp-api/std", "sp-runtime/std"]
