[package]
name = "sp-rpc"
version = "5.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Axlib RPC primitives and utilities."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sp-core = { version = "5.0.0", path = "../core" }
rustc-hash = "1.1.0"

[dev-dependencies]
serde_json = "1.0.74"
