[package]
name = "sp-std"
version = "4.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"

description = "Lowest-abstraction level for the Axlib runtime: just exports useful primitives from std or client/alloc to be used with any code that depends on the runtime."
documentation = "https://docs.rs/sp-std"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = []
