[package]
name = "axlib-test-utils-test-crate"
version = "0.1.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { version = "1.15", features = ["macros"] }
test-utils = { version = "4.0.0-dev", path = "..", package = "axlib-test-utils" }
sc-service = { version = "0.10.0-dev", path = "../../client/service" }
