[package]
name = "fork-tree"
version = "3.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Utility library for managing tree-like ordered data with logic for pruning the tree while finalizing nodes."
documentation = "https://docs.rs/fork-tree"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
