[package]
name = "sc-consensus"
version = "0.10.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Collection of common consensus specific imlementations for Axlib (client)"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "1.0.30"
libp2p = { version = "0.40.0", default-features = false }
log = "0.4.8"
futures = { version = "0.3.1", features = ["thread-pool"] }
futures-timer = "3.0.1"
sc-client-api = { version = "4.0.0-dev", path = "../../api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sp-core = { path = "../../../primitives/core", version = "5.0.0"}
sp-consensus = { path = "../../../primitives/consensus/common", version = "0.10.0-dev" }
sp-state-machine = { version = "0.11.0", path = "../../../primitives/state-machine" }
sp-runtime = { version = "5.0.0", path = "../../../primitives/runtime" }
sc-utils = { version = "4.0.0-dev", path = "../../utils" }
sp-api = { version = "4.0.0-dev", path = "../../../primitives/api" }
parking_lot = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
prometheus-endpoint = { package = "axlib-prometheus-endpoint", path = "../../../utils/prometheus", version = "0.10.0-dev" }
async-trait = "0.1.42"

[dev-dependencies]
sp-test-primitives = { version = "2.0.0", path = "../../../primitives/test-primitives" }
