[package]
name = "pallet-contracts-proc-macro"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Procedural macros used in pallet_contracts"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]

[features]
# If set the full output is generated. Do NOT set when generating for wasm runtime.
full = []
