[package]
name = "pallet-staking-reward-curve"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Reward Curve for FRAME staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.82", features = ["full", "visit"] }
quote = "1.0.10"
proc-macro2 = "1.0.36"
proc-macro-crate = "1.1.0"

[dev-dependencies]
sp-runtime = { version = "5.0.0", path = "../../../primitives/runtime" }
