[package]
name = "pallet-staking-reward-fn"
version = "4.0.0-dev"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
description = "Reward function for FRAME staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]

[dependencies]
sp-arithmetic = { version = "4.0.0", default-features = false, path = "../../../primitives/arithmetic" }
log = { version = "0.4.14", default-features = false }

[features]
default = ["std"]
std = [
	"sp-arithmetic/std",
	"log/std",
]
