[package]
name = "sp-application-crypto-test"
version = "2.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
description = "Integration tests for application-crypto"
license = "Apache-2.0"
publish = false
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "5.0.0", default-features = false, path = "../../core" }
sp-keystore = { version = "0.11.0", path = "../../keystore", default-features = false }
axlib-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sp-runtime = { version = "5.0.0", path = "../../runtime" }
sp-api = { version = "4.0.0-dev", path = "../../api" }
sp-application-crypto = { version = "5.0.0", path = "../" }
