[package]
name = "sp-runtime-interface-test-wasm"
version = "2.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime-interface = { version = "5.0.0", default-features = false, path = "../" }
sp-std = { version = "4.0.0", default-features = false, path = "../../std" }
sp-io = { version = "5.0.0", default-features = false, path = "../../io" }
sp-core = { version = "5.0.0", default-features = false, path = "../../core" }

[build-dependencies]
axlib-wasm-builder = { version = "5.0.0-dev", path = "../../../utils/wasm-builder" }

[features]
default = [ "std" ]
std = [ "sp-runtime-interface/std", "sp-std/std", "sp-core/std", "sp-io/std" ]
