[package]
name = "axlib-test-runtime-client"
version = "2.0.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axiatech/axlib/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-consensus = { version = "0.10.0-dev", path = "../../../primitives/consensus/common" }
sc-consensus = { version = "0.10.0-dev", path = "../../../client/consensus/common" }
sc-block-builder = { version = "0.10.0-dev", path = "../../../client/block-builder" }
axlib-test-client = { version = "2.0.0", path = "../../client" }
sp-core = { version = "5.0.0", path = "../../../primitives/core" }
axlib-test-runtime = { version = "2.0.0", path = "../../runtime" }
sp-runtime = { version = "5.0.0", path = "../../../primitives/runtime" }
sp-api = { version = "4.0.0-dev", path = "../../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sc-client-api = { version = "4.0.0-dev", path = "../../../client/api" }
futures = "0.3.9"
